[gd_scene load_steps=23 format=3 uid="uid://b75buu8ygvc7m"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_g16gw"]
[ext_resource type="Texture2D" uid="uid://ci2s4u4g2eolq" path="res://assets/sprites/bloopy/Bloopy_redux-Sheet.png" id="2_qvh4l"]
[ext_resource type="Texture2D" uid="uid://cndbkpk8x0nop" path="res://assets/sprites/misc/light.png" id="2_rckbx"]
[ext_resource type="Script" path="res://scripts/statemachine/statemachine.gd" id="3_2oenj"]
[ext_resource type="Script" path="res://scripts/player/idle.gd" id="4_vlor3"]
[ext_resource type="Script" path="res://scripts/player/walk.gd" id="5_wnqww"]
[ext_resource type="Texture2D" uid="uid://bryb11wd2xai" path="res://assets/sprites/items/brain.png" id="6_qkrmm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_voua4"]
atlas = ExtResource("2_qvh4l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8lcg2"]
atlas = ExtResource("2_qvh4l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qo8g7"]
atlas = ExtResource("2_qvh4l")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2bp3"]
atlas = ExtResource("2_qvh4l")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdq3t"]
atlas = ExtResource("2_qvh4l")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fpcaa"]
atlas = ExtResource("2_qvh4l")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ojjn"]
atlas = ExtResource("2_qvh4l")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxp87"]
atlas = ExtResource("2_qvh4l")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6wlq"]
atlas = ExtResource("2_qvh4l")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sq0fh"]
atlas = ExtResource("2_qvh4l")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7tig"]
atlas = ExtResource("2_qvh4l")
region = Rect2(192, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_337w1"]
atlas = ExtResource("2_qvh4l")
region = Rect2(224, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jqoql"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_voua4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8lcg2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qo8g7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2bp3")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdq3t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fpcaa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ojjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxp87")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6wlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sq0fh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7tig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_337w1")
}],
"loop": true,
"name": &"Walk",
"speed": 6.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k2qmp"]
size = Vector2(11, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_4gpjn"]
radius = 24.0

[node name="Player" type="CharacterBody2D"]
z_index = 5
script = ExtResource("1_g16gw")

[node name="PointLight2D" type="PointLight2D" parent="."]
energy = 0.7
shadow_enabled = true
shadow_color = Color(0, 0, 0, 0.407843)
texture = ExtResource("2_rckbx")
texture_scale = 0.6

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_jqoql")
animation = &"Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 1)
shape = SubResource("RectangleShape2D_k2qmp")

[node name="ItemDetector" type="Area2D" parent="."]

[node name="Radius" type="CollisionShape2D" parent="ItemDetector"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_4gpjn")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_2oenj")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_vlor3")
_animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("5_wnqww")
_animated_sprite = NodePath("../../AnimatedSprite2D")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="CarriedObject" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -17)
texture = ExtResource("6_qkrmm")

[connection signal="body_entered" from="ItemDetector" to="." method="_on_item_detector_body_entered"]
[connection signal="body_exited" from="ItemDetector" to="." method="_on_item_detector_body_exited"]
